--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "hardevine/shoppingcart": "^3.3",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "razorpay/razorpay": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
